# icfp2022

./: Cargo.toml  test.txt
outputs/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  best.10.txt  best.11.txt  best.12.txt  best.13.txt  best.14.txt  best.15.txt  best.16.txt  best.17.txt  best.18.txt  best.19.txt  best.20.txt  best.21.txt  best.22.txt  best.23.txt  best.24.txt  (+11 more)
src/: api.rs  main.rs  solver.rs
