[package]
name = "icfp2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.63"
fxhash = "0.2.1"
image = "0.24.3"
pretty_assertions = "1.3.0"
rand = { version = "0.8.5", features = ["small_rng"] }
rayon = "1.5.3"
reqwest = { version = "0.11.11", features = ["json", "blocking", "multipart"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
smol_str = "0.1.23"
structopt = "0.3.26"

[profile.release]
debug = true
# lto = true
